--- a/investment_credentials.html
+++ b/investment_credentials.html
@@ -71,7 +71,7 @@
 <body class="has-background-dark">
 
 
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-2 elegant"> Los Pollos Hermanos</h1>
 
 
   <br/>
@@ -92,7 +92,7 @@
         <form>
 
 
-        <h1 class="title is-size-3 has-text-link has-text-centered">Enregistrement</h1>
+        <h1 class="title is-size-2 has-text-link has-text-centered">Enregistrement</h1>
 
 
         <div class="field">
