--- a/investment_payment.html
+++ b/investment_payment.html
@@ -81,7 +81,7 @@
 <body class="has-background-dark">
 
 
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-2 elegant"> Los Pollos Hermanos</h1>
 
 
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
@@ -301,11 +301,13 @@
 
 </nav>
 
-
 <h1 class="title has-text-centered has-text-link is-size-3 mt-2">Paiement</h1>
 
 
 <p class="is-size-4 has-text-centered has-text-white">Choissisez le type de paiement que vous voulez utiliser</p>
+
+<div class="m-4" style="border: 2px solid rgb(255, 204, 36); border-radius: 15px; box-shadow: 0px 0px 5px white, 0px 0px 5px white inset;">
+ 
 
 
 <div class="columns">
@@ -368,7 +370,7 @@
               <span class="icon is-medium is-size-4">
 
 
-                 <i class="fas fa-bitcoin"></i>
+                <i class="fas fa-coins"></i>
 
 
               </span>
@@ -481,6 +483,8 @@
 
 
 </div>
+</div>
+
 
 
 <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
