--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body class="has-background-dark">
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-1 mayan"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
 
     <div  id="navbar"  class="navbar-menu box pt-3 pb-3 m-1 is-active">
@@ -117,7 +117,7 @@
   <div class="container mt-5">
     <div class="columns">
       <div class="column">
-        <h1 class="title has-text-link has-text-centered is-size-3">Menu</h1>
+        <h1 class="has-text-link has-text-centered is-size-2 mayan mb-6">Menu</h1>
         <button class="button has-background-white has-text-success mb-0 ml-0" id="accordion" style="background-image: url(images/menu_poulet_bg.jpg); background-size: cover;"><strong class="has-text-success is-size-2">Poulet</strong></button>
         <div class="box has-background-white" id="panel">
           <div class="box has-background-warning " id="menu_item" style="border: 2px solid black;">
