--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body class="has-background-dark" id="ppbody">
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-1 mayan"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
