--- a/commande_delivery_1.html
+++ b/commande_delivery_1.html
@@ -37,7 +37,7 @@
   </style>
 </head>
 <body class="has-background-dark">
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-1 mayan"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
@@ -118,12 +118,12 @@
 </nav>
 <br/>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsFWNlSO5ylGra_3noSGNIhFZGkXqbw54&libraries=places&callback=initMap"></script>
-<h1 class="title is-size-3 has-text-centered has-text-link">Delivery</h1>
+<h1 class="is-size-2 has-text-centered has-text-link mayan">Delivery</h1>
 <p class="has-text-centered has-text-white is-size-4">Inserez votre adresse</p>
 <div class="columns">
     <div class="column is-half p-6">
         <div class="embed-map-fixed">
-            <div id="map" class="embed-map-container" style="border: #ffc527 2px solid;">
+            <div id="map" class="embed-map-container" style="border: #ffc527 2px solid; box-shadow: 0px 0px 5px white, 0px 0px 5px inset;">
               <style>
                 #map {
                     height: 400px;
