--- a/investment_cb.html
+++ b/investment_cb.html
@@ -72,7 +72,7 @@
 <body class="has-background-dark">
 
 
-  <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
+  <h1 id="title_pp" class="has-text-primary is-size-2 elegant"> Los Pollos Hermanos</h1>
 
 
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
