please work please work please work please work

--- a/contratacion.html
+++ b/contratacion.html
@@ -625,7 +625,7 @@ maintenir, on doit survivre après tout. En tant qu'amants de la nourriture et d
     <li>Aucun type de harcelement ni de discrimination est permis et ces actes seront sévèrement punis, avec le licenciement dans la majorité des cas</li>   
   </lu>
   <h1 class="subtitle is-size-4 has-text-info ml-6">Notions</h1>
-  <p class="ml-6 has-text-white">Vous trouverez ci-dessous les notions legales, on vous prie un nouveau de les lire attentivement. En cas de doute vous pourriez faire vos questions à notre équipe de HR au numero suivant:</p>
+  <p class="ml-6 has-text-white">Vous trouverez ci-dessous les notions legales, on vous prie à nouveau de les lire attentivement. En cas de doute vous pouvez poser vos questions à notre équipe de HR au numero suivant:</p>
   <br/>
   <p class="has-text-centered has-text-info is-size-3">01 23 45 67 98</p>
   <br/>
