--- a/Page_Principale.html
+++ b/Page_Principale.html
@@ -133,6 +133,8 @@ Que ce soit pour un d&eacute;jeuner rapide ou un d&icirc;ner entre amis,<br>
 <em>Los Pollos Hermanos</em> est l'endroit id&eacute;al pour savourer des plats d&eacute;licieux tout en profitant d’un cadre accueillant.<br>
 Vous ne go&ucirc;terez plus jamais le poulet de la m&ecirc;me mani&egrave;re !<br/></p>
       <p class="has-text-white has-text-weight-bold"><em>Los Pollos Hermanos</em>, where something delicious is always cooking...</p>
+      <br>
+      <img src="images/bcsad.jpg" style="border: solid 1px rgb(218, 230, 167)" style="margin-bottom: 20px;">
     </div>
     <div class="column">
       <div class="box has-background-white">
