--- a/commande_choix.html
+++ b/commande_choix.html
@@ -143,7 +143,8 @@
         
     </div>
 </div>
-
+<div style="text-align: center;">
+  <img src="images/saulad.jpg" style="border: 1px yellow">
 <div class="modal" id="connection_modal">
   <div class="modal-background"></div>
   <div class="modal-content">
