--- a/contratacion.html
+++ b/contratacion.html
@@ -129,6 +129,7 @@
 <div id="generalites_tab" class="tabcontent">
 <div class="container mt-5">
   <div class="columns">
+    <img src="images/chickenad.jpg" style="border: 1px white">
     <div class="column is-half">
       <h1 class="is-size-3 mayan">Rejoignez l'équipe de <em>Los Pollos Hermanos</em></h1>
 <p class="has-text-white">Chez <em>Los Pollos Hermanos</em>, nous croyons que notre succès repose sur la passion<br>
