--- a/investment_thanking.html
+++ b/investment_thanking.html
@@ -285,7 +285,9 @@
 
 
 <h1 class="title is-size-2 has-text-link has-text-centered mt-6 mb-6">Si vous voulez vendre vos parts, contactez l'un de nos agents spécialisés au 01 23 45 67 98</h1>
-
+<div style="text-align: center;">
+<img src="images/carwashad.jpg" style="border: 1px yellow">
+</div>
 <div class="modal" id="connection_modal">
     <div class="modal-background"></div>
     <div class="modal-content">
