--- a/contratacion.html
+++ b/contratacion.html
@@ -235,7 +235,7 @@ nous croyons en l'importance de la formation continue et du développement perso
 </div>
 
 <div class="field">
-  <div class="control">
+  <div class="control has-text-success">
     <label class="checkbox">
       <input type="checkbox">
       J'ai lu et accepte les <a href="termes_et_conditions.html">termes et conditions</a>
