--- a/contratacion.html
+++ b/contratacion.html
@@ -44,8 +44,32 @@
         Nous
       </a>
 
-      <a class="navbar-item pr-4 pl-4 has-text-" href="menu.html">
-        Menu
+      <style>
+        .sale-circle {
+          display: inline-block;
+          margin-left: 1px;
+          margin-top: 0px;
+          background-color: red;
+          color: white;
+          padding: 2px 6px;
+          font-size: 0.7rem;
+          font-weight: bold;
+          border-radius: 50%;
+          animation: bounce 0.8s infinite ease-in-out;
+      }
+      
+      @keyframes bounce {
+          0%, 100% {
+              transform: translateY(0);
+          }
+          50% {
+              transform: translateY(-4px);
+          }
+      }
+      </style>
+        <a class="navbar-item pr-4 pl-4 is-selected sale-badge-nav" href="menu.html">
+          Menu
+          <span class="sale-circle">Sale</span>
       </a>
 
      
