--- a/termes_et_conditions.html
+++ b/termes_et_conditions.html
@@ -40,12 +40,36 @@
   
     <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
       <div class="navbar-start">
-        <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale">
+        <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale.html">
           Nous
         </a>
   
-        <a class="navbar-item pr-4 pl-4 has-text-" href="menu.html">
-          Menu
+        <style>
+          .sale-circle {
+            display: inline-block;
+            margin-left: 1px;
+            margin-top: 0px;
+            background-color: red;
+            color: white;
+            padding: 2px 6px;
+            font-size: 0.7rem;
+            font-weight: bold;
+            border-radius: 50%;
+            animation: bounce 0.8s infinite ease-in-out;
+        }
+        
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-4px);
+            }
+        }
+        </style>
+          <a class="navbar-item pr-4 pl-4 is-selected sale-badge-nav" href="menu.html">
+            Menu
+            <span class="sale-circle">Sale</span>
         </a>
         
         <div class="navbar-item has-dropdown is-hoverable">
