--- a/contratacion.html
+++ b/contratacion.html
@@ -78,40 +78,33 @@
           Exercices
         </a>
 
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            Exercice 1
-          </a>
-          <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
-            Exercice 2
-          </a>
-          <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
-            Exercice 3
-          </a>
-          <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
-            Exercice 4
-          </a>
-          <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
-            Exercice 5
-          </a>
-          <a href="Angel-Exercice6-HTML.html" class="navbar-item">
-            Exercice 6
-          </a>
-        </div>
-      </div>
-
-      <div class="navbar-item has-dropdown-up is-hoverable">
-        <a class="navbar-link">
-          Activités
+        <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
+          Exercice 1
         </a>
+        <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
+          Exercice 2
+        </a>
+        <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
+          Exercice 3
+        </a>
+        <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
+          Exercice 4
+        </a>
+        <a href="Angel-Exercice6-HTML.html" class="navbar-item">
+          Exercice 5
+        </a>
+      </div>
+    </div>
 
-        <div class="navbar-dropdown">
-          <a href="ac1.html" class="navbar-item">
-            Activité 1
-          </a>
-          <a class="navbar-item">
-            Activité 2
-          </a>
+    <div class="navbar-item has-dropdown is-hoverable">
+      <a class="navbar-link">
+        Activités
+      </a>
+
+      <div class="navbar-dropdown">
+        <a href="ac1.html" class="navbar-item">
+          Activité 1
+        </a>
         </div>
       </div>
     </div>
