--- a/investment_credentials.html
+++ b/investment_credentials.html
@@ -173,13 +173,13 @@
          </div>
 
 
-         <label class="label has-text-info">Addresse de résidence</label>
+         <label class="label has-text-info">Adresse de résidence</label>
 
 
          <div class="control">
 
 
-           <input class="input" type="text" placeholder="Votre addresse de résidence" name="acc_username" style="border: 1px solid #43ebff;">
+           <input class="input" type="text" placeholder="Votre adresse de résidence" name="acc_username" style="border: 1px solid #43ebff;">
 
 
          </div>
@@ -188,13 +188,13 @@
            <div class="field">
 
 
-         <label class="label has-text-info">Addresse de compagnie</label>
+         <label class="label has-text-info">Adresse de compagnie</label>
 
 
          <div class="control">
 
 
-           <input class="input" type="text" placeholder="L'addresse de votre compagnie/de votre lieu de travail" name="acc_passw" style="border: 1px solid #43ebff;">
+           <input class="input" type="text" placeholder="L'adresse de votre compagnie/de votre lieu de travail" name="acc_passw" style="border: 1px solid #43ebff;">
 
 
          </div>
