--- a/menu.html
+++ b/menu.html
@@ -79,38 +79,32 @@
           </a>
 
           <div class="navbar-dropdown">
-            <a class="navbar-item">
+            <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
               Exercice 1
             </a>
-            <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
+            <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
               Exercice 2
             </a>
-            <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
+            <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
               Exercice 3
             </a>
-            <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
+            <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
               Exercice 4
             </a>
-            <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
-              Exercice 5
-            </a>
             <a href="Angel-Exercice6-HTML.html" class="navbar-item">
-              Exercice 6
+              Exercice 5
             </a>
           </div>
         </div>
-
+  
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             Activités
           </a>
-
+  
           <div class="navbar-dropdown">
             <a href="ac1.html" class="navbar-item">
               Activité 1
-            </a>
-            <a class="navbar-item">
-              Activité 2
             </a>
           </div>
         </div>
@@ -155,7 +149,7 @@
                 <div class="content">
                   <p class="has-text-success">
                     <strong class="has-text-success">Poulet Rôti Signature</strong>
-                    <small>8.99€</small>
+                    <small><s>9.99€</s> 8.99€</small>
                     <br />
                     Poulet rôti mariné dans une sauce secrète, servi avec des frites maison et une sauce au choix.
                   </p>
@@ -175,7 +169,7 @@
                 <div class="content">
                   <p class="has-text-white">
                     <strong class="has-text-white">Poulet Épicé aux Cactus</strong>
-                    <small>9.99€</small>
+                    <small><s>11.99€</s> 9.99€</small>
                     <br />
                     Filets de poulet épicés accompagnés d'une salade de cactus frais et de riz basmati.
                   </p>
@@ -195,7 +189,7 @@
                 <div class="content">
                   <p class="has-text-white">
                     <strong class="has-text-white">Poulet Grillé à l'Avocat</strong>
-                    <small>11.99€</small>
+                    <small><s>14.99€</s> 11.99€</small>
                     <br />
                     Poitrine de poulet grillée servie avec une sauce crémeuse à l'avocat et des légumes croquants.
                   </p>
@@ -327,7 +321,7 @@
        <div class="field">
          <label class="label has-text-info">Mot de passe </label>
          <div class="control">
-           <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+           <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secret" style="border: 1px solid #43ebff;">
          </div>
        </div>
        <div class="buttons">
