--- a/Nazar-Exercice5-HTML.html
+++ b/Nazar-Exercice5-HTML.html
@@ -4,12 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercice 5</title>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
+  >
+    <link rel="stylesheet" href="styles/style_PP.css">
+  <style>
+    :root {
+      --bulma-primary-h: 7deg;
+  --bulma-primary-l: 49%;
+  --bulma-link-h: 45deg;
+  --bulma-link-l: 49%;
+  --bulma-info-h: 191deg;
+  --bulma-info-l: 49%;
+  --bulma-success-s: 100%;
+  --bulma-success-l: 0%;
+  --bulma-warning-h: 37deg;
+  --bulma-warning-l: 49%;
+  --bulma-danger-h: 360deg;
+  --bulma-danger-l: 38%;
+  --bulma-scheme-h: 57;
+  --bulma-scheme-s: 100%;
+  --bulma-light-l: 100%;
+  --bulma-light-invert-l: 100%;
+  --bulma-border: #ffdb3b;
+  --bulma-dark-l: 7%;
+}
+  </style>
+  <title>Exercice 4</title>
 </head>
 <body>
-  <button onclick="exercice()">Exercice 5</button><br/>
+    <h1 class="is-size-1 has-text-centered has-text-primary mayan">Exercice 5</h1>
+  <p class="has-text-centered has-text-white is-size-4 mb-4">appuyez le boutton pour savoir si votre chaine des caracteres contient la lettre "e"</p>
 
-  <li><a href="Page_Principale.html" class="navbar_item">Page Principale</a></li>
+    
+    <div class="field is-grouped is-grouped-centered">
+        <div class="m-6 p-6" style="border: red 2px solid; border-radius: 15px;box-shadow: 0px 0px 5px white, 0px 0px 5px white inset;">
+            <div class="control">
+                <button class="button is-primary is-size-4 " onclick="exercice()">Exercice 5</button>
+            </div>
+        </div>
+        
+    </div>
+
+ <br/>
+
+  <div class="field is-grouped is-grouped-centered ">
+      <a class="button is-link is-size-4" href="Page_Principale.html" class="navbar_item">Page Principale</a>
+    </div>
 
     <script>
       function exercice() {
