--- a/cart.html
+++ b/cart.html
@@ -55,23 +55,20 @@
         </a>
 
         <div class="navbar-dropdown">
-          <a href="" class="navbar-item">
+          <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
             Exercice 1
           </a>
-          <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
+          <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
             Exercice 2
           </a>
-          <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
+          <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
             Exercice 3
           </a>
-          <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
+          <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
             Exercice 4
           </a>
-          <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
-            Exercice 5
-          </a>
           <a href="Angel-Exercice6-HTML.html" class="navbar-item">
-            Exercice 6
+            Exercice 5
           </a>
         </div>
       </div>
@@ -84,9 +81,6 @@
         <div class="navbar-dropdown">
           <a href="ac1.html" class="navbar-item">
             Activité 1
-          </a>
-          <a class="navbar-item">
-            Activité 2
           </a>
         </div>
       </div>
@@ -158,7 +152,7 @@
        <div class="field">
          <label class="label has-text-info">Mot de passe </label>
          <div class="control">
-           <input class="input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+           <input class="input" type="text" placeholder="Votre mot hyper-secret" style="border: 1px solid #43ebff;">
          </div>
        </div>
        <div class="buttons">
