--- a/investment_space.html
+++ b/investment_space.html
@@ -126,98 +126,32 @@
         <div class="navbar-dropdown">
 
 
-          <a href="" class="navbar-item">
-
-
-            Exercice 1
-
-
-          </a>
-
-
           <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
-
-
-            Exercice 2
-
-
+            Exercice 1
           </a>
-
-
           <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
-
-
-            Exercice 3
-
-
+            Exercice 2
           </a>
-
-
           <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
-
-
-            Exercice 4
-
-
+            Exercice 3
           </a>
-
-
           <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
-
-
-            Exercice 5
-
-
+            Exercice 4
           </a>
-
-
           <a href="Angel-Exercice6-HTML.html" class="navbar-item">
-
-
-            Exercice 6
-
-
+            Exercice 5
           </a>
-
-
         </div>
-
-
       </div>
 
- 
-
       <div class="navbar-item has-dropdown is-hoverable">
-
-
         <a class="navbar-link">
-
-
           Activités
-
-
         </a>
 
- 
-
         <div class="navbar-dropdown">
-
-
           <a href="ac1.html" class="navbar-item">
-
-
             Activité 1
-
-
-          </a>
-
-
-          <a class="navbar-item">
-
-
-            Activité 2
-
-
           </a>
 
 
@@ -363,7 +297,7 @@
          <div class="control">
 
 
-           <input class="input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+           <input class="input" type="text" placeholder="Votre mot hyper-secret" style="border: 1px solid #43ebff;">
 
 
          </div>
