--- a/investment_thanking.html
+++ b/investment_thanking.html
@@ -125,98 +125,32 @@
         <div class="navbar-dropdown">
 
 
-          <a href="" class="navbar-item">
-
-
-            Exercice 1
-
-
-          </a>
-
-
           <a href="Tanguy-Exercice2-HTML.html" class="navbar-item">
-
-
-            Exercice 2
-
-
+            Exercice 1
           </a>
-
-
           <a href="Tanguy-Exercice3-HTML.html" class="navbar-item">
-
-
-            Exercice 3
-
-
+            Exercice 2
           </a>
-
-
           <a href="Nazar-Exercice4-HTML.html" class="navbar-item">
-
-
-            Exercice 4
-
-
+            Exercice 3
           </a>
-
-
           <a href="Nazar-Exercice5-HTML.html" class="navbar-item">
-
-
-            Exercice 5
-
-
+            Exercice 4
           </a>
-
-
           <a href="Angel-Exercice6-HTML.html" class="navbar-item">
-
-
-            Exercice 6
-
-
+            Exercice 5
           </a>
-
-
         </div>
-
-
       </div>
 
- 
-
       <div class="navbar-item has-dropdown is-hoverable">
-
-
         <a class="navbar-link">
-
-
           Activités
-
-
         </a>
 
- 
-
         <div class="navbar-dropdown">
-
-
           <a href="ac1.html" class="navbar-item">
-
-
             Activité 1
-
-
-          </a>
-
-
-          <a class="navbar-item">
-
-
-            Activité 2
-
-
           </a>
 
 
@@ -300,7 +234,7 @@
        <div class="field">
          <label class="label has-text-info">Mot de passe </label>
          <div class="control">
-           <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+           <input class="input" id="password_input" type="text" placeholder="Votre mot hyper-secret" style="border: 1px solid #43ebff;">
          </div>
        </div>
        <div class="buttons">
